Wed Apr  9 17:09:40 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_ltlibraries): Use correct rpath
	substitution.  Bug from Jim Blandy.

Mon Apr  7 17:40:18 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (AM_INIT_AUTOMAKE_PATTERN): Fixed for new 3rd arg.
	Test version2.test.

Thu Apr  3 19:07:59 1997  Tom Tromey  <tromey@cygnus.com>

	* Released 1.1n.

	* tags.am (TAGS): Run "cd && etags" in subshell for proper
	associativity.

	* texinfos.am (install-info-am): If --cygnus, then info file can
	be in build dir.  From David Zaroski.

	* ltlibrary.am (@LTLIBRARY@): use @RPATH@, not explicit -rpath.

	* automake.in (handle_ltlibraries): Treat EXTRA_ libraries
	specially.

Wed Apr  2 00:03:50 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Don't generate dependency
	on config.h.
	(scan_dependency_file): Strip the .P file from the target.

	* automake.in (handle_tags): Use single, not double, quotes when
	setting list variable.

	* data.am, header.am, libs.am, lisp.am, ltlib.am, progs-clean.am,
	progs.am, scripts.am, tags.am: Use single quotes to fill list
	variable; otherwise `$' in filename will not work.  From Per
	Bothner.

	* mdate-sh: Use "ls -d" so mdate-sh can be run on a directory.
	From Bruno Haible.

	* automake.in (handle_programs): Error if LIBADD used where LDADD
	meant.
	(handle_libraries): Error if LDADD used where LIBADD meant.
	(handle_ltlibraries): Likewise.

Tue Apr  1 22:46:33 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (check_canonical_spelling): New sub.
	(handle_programs): Use it.
	(handle_libraries): Likewise.
	(handle_ltlibraries): Likewise.

Mon Mar 31 12:13:08 1997  Tom Tromey  <tromey@cygnus.com>

	* depend2.am (.deps/%.P): Make .P file depend on everything the .c
	file includes.

Fri Mar 28 23:34:49 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Error if stamp-h appears in
	AC_OUTPUT line.

Thu Mar 27 17:28:47 1997  Tom Tromey  <tromey@cygnus.com>
