@@ -2,6 +2,7 @@ Automake was originally written by David J. MacKenzie <djm@uunet.uu.net>.
 It would not be what it is today without the invaluable help of these
 people:
 
+Akim Demaille <demaille@inf.enst.fr>
 Alexander V. Lukyanov <lav@yars.free.net>
 Andreas Schwab <schwab@lamothe.informatik.uni-dortmund.de>
 Anthony Green <green@cygnus.com>
@@ -17,6 +18,7 @@ Gord Matzigkeit <gord@gnu.ai.mit.edu>
 Greg A. Woods <woods@most.weird.com>
 Harlan Stenn <Harlan.Stenn@pfcs.com>
 Henrik Frystyk Nielsen <frystyk@w3.org>
+Ian Lance Taylor <ian@cygnus.com>
 Janos Farkas <chexum@shadow.banki.hu>
 Jason Molenda <crash@cygnus.co.jp>
 Jerome Santini <santini@chambord.univ-orleans.fr>
