@@ -1,5 +1,17 @@
+** make sure every variable that is used is also defined
+
+* make sure `missing' defines are generated
+* if no AM_INIT_AUTOMAKE, then don't handle `missing' stuff.
+  Yuck!
+
+* allow 'cygnus' in AUTOMAKE_OPTIONS
+
+
+
 * NORMAL_INSTALL / NORMAL_UNINSTALL -vs- recursive rules
   [ requires changes to the standard ]
+
+* if foo.y is a source, foo.h isn't auto-distributed?
 
 * dependency tracking doesn't work well when a file is removed
   the new code to track header dependencies exacerbates this
@@ -9,8 +21,6 @@
   as a side effect of compilation
   This still won't solve the file-deletion problem
 
-* make sure `missing' defines are generated
-
 * copyrights on m4 files, aclocal output
 
 * is there a way to add a directory and then have "make" do all the
@@ -18,8 +28,6 @@
 
 * put standards.texi into distribution
 
-* if no AM_INIT_AUTOMAKE, then don't handle `missing' stuff.
-  Yuck!
 
 * should not put texiname_TEXINFOS into distribution
   should rename this macro anyway, to foo_texi_DEPENDENCIES
