@@ -23,11 +23,9 @@ ID: $(HEADERS) $(SOURCES)
 TAGS: @DIRS@ $(HEADERS) $(SOURCES) @CONFIG@ $(TAGS_DEPENDENCIES)
 	tags=; \
 	here=`pwd`; \
-## It is ok to examine SUBDIRS here in every case; if it is empty,
-## there is a slight performance hit.  But we don't care.
-	list='$(SUBDIRS)'; for subdir in $$list; do \
-	  test -f $$subdir/TAGS && tags="$$tags -i $$here/$$subdir/TAGS"; \
-	done; \
+SUBDIRS	list='$(SUBDIRS)'; for subdir in $$list; do \
+SUBDIRS	  test -f $$subdir/TAGS && tags="$$tags -i $$here/$$subdir/TAGS"; \
+SUBDIRS	done; \
 ## Make sure we have something to run etags on.
 	test -z "$(ETAGS_ARGS)@CONFIG@$(SOURCES)$(HEADERS)$$tags" \
 	  || (cd $(srcdir) && etags $(ETAGS_ARGS) $$tags @CONFIG@ $(SOURCES) $(HEADERS) -o $$here/TAGS)
