@@ -1,3 +1,12 @@
+Tue Apr 15 12:12:28 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_subdirs): Typo fix.  From Akim Demaille.
+
+	* automake.in (handle_tags): Only use SUBDIRS if it is actually
+	defined.  Report from Ian Taylor.
+
+	* tags.am: Added prefix to SUBDIRS rules.
+
 Wed Apr  9 17:09:40 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_ltlibraries): Use correct rpath
